<resources>
    <string name="app_name">MissionAlertClock</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="AlertSetTitle">タイマーをセットする</string>
    <string name="pick_time">時間を変える</string>
    <string name="timer_start">タイマーをスタートする</string>
    <string name="SleepRecordTitle">睡眠記録を見る</string>
    <string name="goal_review_title">今日はどうだった？</string>
    <string name="action_settings">Settings</string>
    <string name="take_photo_result_yell">今日も頑張ろう！</string>
    <string name="take_photo_result" />
    <string name="alarmcancelBtn">キャンセル</string>
    <string name="goodmorningTxt">おはようございます！\n今日も目標を確認して一日を始めましょう！</string>
    <string name="cameramissionstartbtn">カメラを起動する</string>
    <string name="emergencyalarmstopbtn">強制的に終了する</string>
    <string name="TimerSetFragmentCurrentTimeTxt" >ここに文字が入ります</string>>
    <string name="snooze" >スヌーズ</string>>
    <string name="channel_name" >001</string>>
    <string name="menu_label_add_record">記録を追加</string>
    <string name="titledonething">できたこと：</string>



</resources>