<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alert.TimersetFragment">


    <TextView
        android:id="@+id/AlertSetTitle"
        android:layout_width="324dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/AlertSetTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timersetfragmentcurrenttime"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/TimerSetFragmentCurrentTimeTxt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/timechangebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AlertSetTitle" />

    <Button
        android:id="@+id/timechangebtn"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintBottom_toTopOf="@+id/timerstartbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/timerstartbtn"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/timer_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>