<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timerdisplayatringing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintBottom_toBottomOf="parent"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:layout_constraintTop_toTopOf="parent"
        android:text="ここに時計が表示される"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/goodMorningTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goodmorningTxt"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/CameraMissionStartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cameramissionstartbtn"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="544dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergencyalarmstopbtn"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="621dp" />
</androidx.constraintlayout.widget.ConstraintLayout>